--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,31 @@
 /** @format */
 
+.message {
+  border: 1px solid black;
+  width: 20rem;
+  height: 4rem;
+}
+
 .game-container {
   display: flex;
   flex-direction: column;
   margin: 35px;
   align-items: center;
+  justify-content: center;
   gap: 10px;
 }
 
 .board-container {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
+  width: 40vw;
+}
 
+.shipyard {
+  background-color: grey;
   width: 50vw;
+  height: 40vw;
+  margin: 10px;
 }
 
 .board-row {
@@ -29,10 +42,48 @@
 }
 
 .ship {
-  background-color: grey;
+  background-color: green;
+  height: 1rem;
+  border: 1px solid white;
+}
+
+.draggable {
+  cursor: move;
+}
+
+.dragging {
+  opacity: 0.5;
+}
+
+.highlighted {
+  opacity: 0.5;
+}
+
+.carrier {
+  width: 12rem;
+}
+
+.battleship {
+  width: 9rem;
+}
+
+.destroyer {
+  width: 7rem;
+}
+
+.submarine {
+  width: 7rem;
+}
+
+.patrolBoat {
+  width: 4.5rem;
 }
 
 .hit {
+  background-color: red;
+}
+
+.sunk {
   background-color: red;
 }
 
