--- a/src/styles.css
+++ b/src/styles.css
@@ -30,14 +30,14 @@
 
 .board-row {
   display: flex;
-  border: 0.1px solid #ccc;
+  border: 0.1px dotted #ccc;
 }
 
 .board-cell {
   flex: 1;
   width: 1rem;
   height: 1rem;
-  border: 0.1px solid #ccc;
+  border: 0.1px dotted #ccc;
   background-color: #1b95e0;
 }
 
@@ -59,13 +59,13 @@
   opacity: 0.5;
 }
 
-/* [data-ship-type="carrier"] {
+[data-ship-type="carrier"] {
   background-color: #222 !important;
-  border-radius: 10px;
-  position: absolute;
+  border-radius: 6px;
+  position: relative;
 }
 
-[data-ship-type="carrier"]::before {
+/* [data-ship-type="carrier"]::before {
   content: "";
   width: 80%;
   height: 60%;
@@ -84,6 +84,12 @@
   top: 10%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+[data-ship-type="destroyer"] {
+  background-color: #222 !important;
+  border-radius: 10px;
+  position: absolute;
 } */
 
 .carrier {
