--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,81 @@
 /** @format */
 
+:root {
+  font-size: 24px;
+  color: white;
+  --dark-cyan: #0e9594;
+  --wheat: #f5dfbb;
+  --mountbatten-pink: #95818d;
+}
+
+html {
+  overflow: hidden;
+  overscroll-behavior: none;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.background-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  opacity: 0.7;
+  z-index: -1;
+}
+
+.info {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-container {
+  display: flex;
+  margin: 35px;
+  justify-content: center;
+  gap: 50px;
+}
+
+.player1-board,
+.player2-board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.board-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.shipyard {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  background-color: #5abcd8;
+  padding: 10px;
+  width: 38vw;
+  min-height: 15vw;
+  border: 1px dashed black;
+  border-radius: 8px;
+}
+
 .start {
   background: #5e5df0;
   border-radius: 99px;
@@ -32,42 +108,17 @@
   font-weight: 500;
   text-align: center;
   width: 50%;
-}
-
-.message {
   border: 1px solid black;
   width: 20rem;
   height: 4rem;
 }
 
-.game-container {
-  display: flex;
-  flex-direction: column;
-  margin: 35px;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.board-container {
-  display: grid;
-  grid-template-rows: repeat(10, 1fr);
-  width: 40vw;
-}
-
-.shipyard {
-  background-color: cyan;
-  width: 50vw;
-  height: 40vw;
-  margin: 10px;
-}
-
 .board-row {
   display: flex;
-  border: 0.1px dotted #ccc;
 }
 
 .board-cell {
+  opacity: 0.9;
   flex: 1;
   width: 1rem;
   height: 1rem;
@@ -79,13 +130,15 @@
 .ship {
   background-color: grey;
   height: 1rem;
-  border: 1px solid white;
+  border: 1px solid #1b95e0;
+
+  border-radius: 1px;
 }
 
 .enemy-ship {
-  background-color: orange;
+  background-color: #1b95e0;
   height: 1rem;
-  border: 1px solid white;
+  border: 0.1px dotted #ccc;
 }
 
 .draggable {
@@ -153,12 +206,10 @@
   width: 4.5rem;
 }
 
-.hit {
-  background-color: red;
-}
-
+.hit,
 .sunk {
   background-color: red;
+  border-radius: 100%;
 }
 
 .miss {
