--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .background-img {
@@ -37,6 +38,29 @@ main {
   object-position: center;
   opacity: 0.7;
   z-index: -1;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  color: black;
+  font-family: "Notable", sans-serif;
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+input {
+  font-size: 1rem;
+  text-align: center;
+  margin: 0;
+  outline: none;
+  border: none;
+  margin-bottom: 20px;
 }
 
 .draggable {
@@ -228,6 +252,15 @@ main {
 .sunk {
   background-color: red;
   border-radius: 100%;
+}
+
+.sunk::before {
+  content: "X";
+  color: rgb(211, 9, 50);
+  border-radius: 10px;
+  position: relative;
+  bottom: 20%;
+  left: 20%;
 }
 
 .miss {
